# fooproj

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
fooproj/: cli.py
fooproj/game/: config.py  runtime.py  scene.py
src/fooproj/: __init__.py  cli.py
tests/: test_cli.py  test_runtime_controls.py  test_scene.py
